# cmd2zip

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.txt
src/: main.rs
